*começo de redirecionamento

--- a/pergunta01.html
+++ b/pergunta01.html
@@ -19,6 +19,14 @@
             <button id="errada">Sérgio</button>
             <button id="errada">Matias</button>
         </div>
+        <script>
+            const AlternativaCorreta
+            function RespostaCorreta() {
+                const AlternativaCorreta = document.getElementById("correta").value;
+                
+                if (AlternativaCorreta == )
+            }
+        </script>
     </main>
 </body>
 </html>
